--- a/mypy.ini
+++ b/mypy.ini
@@ -11,3 +11,6 @@ explicit_package_bases = True
 # Enable useful warnings
 warn_unused_ignores = True
 warn_redundant_casts = True
+
+# Suppress notes about untyped function bodies (not errors)
+disable_error_code = annotation-unchecked
