Changes for #216 phases 4, 5 and 6

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,10 @@ explicit_package_bases = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 disable_error_code = annotation-unchecked
+exclude = (?x)(
+    ^Archive/
+    | /Archive/
+  )
 
 [mypy-src.parser]
 warn_return_any = True
