Fixed typing errors downstream of setting up LLM to parse user input to JSON, and also refactoring trust management

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,6 +7,7 @@ disable_error_code = annotation-unchecked
 exclude = (?x)(
     ^Archive/
     | /Archive/
+    | ^tests/infrastructure/DISABLED_
   )
 
 [mypy-src.parser]
